FrostWire 2.4.6 build 689 - JAN/24/2022
 - jlibtorrent 1.2.15.2
 - compileSdkVersion 31
 - com.google.android.material:material:1.5.0
 - androidx.browser:browser:1.4.0
 - com.google.firebase:firebase-crashlytics-gradle:2.8.1
 - com.google.firebase:firebase-bom:29.0.4
 - androidx.appcompat:appcompat:1.4.1
 - androidx.core:core-ktx:1.7.0
 - androidx.media2:media2-session:1.2.0
 - androidx.media2:media2-widget:1.2.0
 - androidx.media2:media2-player:1.2.0
 - com.google.android.gms:play-services-ads:20.4.0
 - com.applovin:applovin-sdk:10.3.5
 - com.mopub.mediation:applovin:10.3.4.0
 - com.android.tools.build:gradle:7.1.0
 - androidx.preference:preference:1.2.0
 - Chinese translation update by TheJokerW

FrostWire 2.4.5 build 688 - JAN/07/2022
 - jlibtorrent 1.2.15.1 (boost 1.78, openssl 1.1.1m)
 - lt:don't disable announcing from local endpoints because of temporary failures
 - lt:fix issue in parsing UPnP XML response with multiple forwarding services
 - lt:cache DNS lookups for SOCKS5 proxy
 - lt:fix stalled pieces on disk-full errors
 - lt:fix build configuration issue on NetBSD, OpenBSD and DragonFly
 - lt:make UTF-8 sanitization a bit stricter. This will re-write invalid UTF-8 code points encoding surrogate pairs
 - lt:fix restoring last_seen_complete from resume data
 - lt:fix issue on MacOS where the DHT was not restarted on a network-up notification
 - lt:make remove_torrent flags be treated as flags (instead of an enum)

FrostWire 2.4.4 build 687 - NOV/23/2021
 - jlibtorrent 1.2.14.2 (rebuild with boost 1.77)
 - smaller installer size
 - androidx.annotation:annotation:1.3.0
 - com.google.firebase:firebase-crashlytics-gradle:2.8.0

FrostWire 2.4.3 build 686 - OCT/22/2021
 - Fixes search bug that would occur after exiting and reopening app
 - Better search http connection management
 - androidx.media2:media2-*:1.2.0 update
 - targetSdkVersion 31 (Android 12)
 - com.applovin:applovin-sdk:10.3.4
 - com.mopub.mediation:applovin:10.3.3.0