@@ -1,19 +1,19 @@
 /*
- * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
- * Copyright (c) 2011-2016, FrostWire(R). All rights reserved.
+ * Created by Angel Leon (@gubatron), Alden Torres (aldenml),
+ *            Marcelina Knitter (@marcelinkaaa)
+ * Copyright (c) 2011-2022, FrostWire(R). All rights reserved.
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.frostwire.android;
@@ -180,7 +180,7 @@ public final class AndroidPaths implements SystemPaths {
     }
 
     public static byte getFileType(String filePath, boolean returnTorrentsAsDocument) {
-        byte result = Constants.FILE_TYPE_DOCUMENTS;
+        byte result = Constants.FILE_TYPE_UNKNOWN;
 
         MediaType mt = MediaType.getMediaTypeForExtension(FilenameUtils.getExtension(filePath));
 
@@ -206,6 +206,7 @@ public final class AndroidPaths implements SystemPaths {
 
         // "Music/FrostWire"
         String mediaStoreFolderPrefix = fileTypeSubfolder + "/FrostWire";
+        mediaStoreFolderPrefix = mediaStoreFolderPrefix.replace("//","/");
 
         String fullOriginalFilePath = f.getAbsolutePath();
 
@@ -220,7 +221,7 @@ public final class AndroidPaths implements SystemPaths {
         }
 
         String fileFoldersWithoutDataPath = removedDataPathFromFilePath.replace(f.getName(), "");
-        return mediaStoreFolderPrefix + "/" + fileFoldersWithoutDataPath;
+        return (mediaStoreFolderPrefix + "/" + fileFoldersWithoutDataPath).replace("//","/");
     }
 
     /**
